build_files/lib/error/test/lib/print/base/print.c
/*
** EPITECH PROJECT, 2025
** str - str.c
** File description:
** <description>
*/

#include "../includes/print.h"

void print_exist(void)
{
}
